# starwars

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml  redis.conf
rust/: Cargo.toml
rust/src/: main.rs
rust/src/schema/: models.rs
src/: data.json  main.rs
src/schema/: models.rs
