[package]
name = "elder-shop"
version = "0.1.0"
edition = "2021"

[dependencies]
slab = "0.4.2"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-graphql = "4.0"
async-graphql-actix-web = "4.0"
redis = { version = "0.17.0", features = ["tokio-comp"] }
actix-web = { version = "4.0", default-features = true, features = ["macros"] }
tokio = { version = "1", features = ["full"] }
bb8-redis = "0.11.0"