[package]
name = "starwars"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-graphql = "4.0"
async-graphql-actix-web = "4.0"
redis = { version = "0.17.0", features = ["tokio-comp"] }
actix-web = { version = "4.0", default-features = false, features = ["macros"] }
tokio = { version = "1", features = ["full"] }
bb8-redis = "0.11.0"

[profile.release]
codegen-units = 1
opt-level = 3